--- a/ui/src/app/connect/components/edit-adapter/edit-adapter.component.html
+++ b/ui/src/app/connect/components/edit-adapter/edit-adapter.component.html
@@ -1,1 +1,5 @@
-<p>edit-adapter works!</p>
+<sp-adapter-configuration *ngIf="initialized"
+                          [isEditMode]="true"
+                          [displayName]="adapterName"
+                          [adapter]="adapter"></sp-adapter-configuration>
+
