--- a/ui/src/app/connect/components/new-adapter/new-adapter.component.html
+++ b/ui/src/app/connect/components/new-adapter/new-adapter.component.html
@@ -1,3 +1,4 @@
 <sp-adapter-configuration *ngIf="initialized"
-                          [adapterTypeName]="adapterTypeName"
-                          [adapter]="adapter"></sp-adapter-configuration>
+                          [displayName]="adapterTypeName"
+                          [adapter]="adapter"
+                          [isEditMode]="false"></sp-adapter-configuration>
