--- a/ui/src/app/connect/components/adapter-configuration/adapter-configuration.component.html
+++ b/ui/src/app/connect/components/adapter-configuration/adapter-configuration.component.html
@@ -77,6 +77,7 @@
                 <sp-start-adapter-configuration
                         [adapterDescription]="adapter"
                         [eventSchema]="eventSchema"
+                        [isEditMode]="isEditMode"
                         (removeSelectionEmitter)="removeSelection()"
                         (goBackEmitter)="goBack()"
                         (adapterStartedEmitter)="adapterWasStarted()">
