--- a/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
+++ b/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
@@ -54,14 +54,22 @@
               <ng-container matColumnDef="start">
                 <th mat-header-cell *matHeaderCellDef> Start</th>
                 <td mat-cell *matCellDef="let adapter">
-                  <button color="accent" mat-button mat-icon-button matTooltip="Start adapter"
+                  <button color="accent"
+                          mat-button
+                          mat-icon-button
+                          matTooltip="Start adapter"
                           matTooltipPosition="above"
+                          data-cy="start-adapter"
                           (click)="startAdapter(adapter)"
                           *ngIf="(connectService.isDataStreamDescription(adapter)) && !adapter.running">
                     <i class="material-icons">play_arrow</i>
                   </button>
-                  <button color="accent" mat-button mat-icon-button matTooltip="Stop adapter"
+                  <button color="accent"
+                          mat-button
+                          mat-icon-button
+                          matTooltip="Stop adapter"
                           matTooltipPosition="above"
+                          data-cy="stop-adapter"
                           (click)="stopAdapter(adapter)"
                           *ngIf="(connectService.isDataStreamDescription(adapter)) && adapter.running">
                     <i class="material-icons">stop</i>
@@ -132,6 +140,7 @@
                               mat-button mat-icon-button
                               matTooltip="Show info"
                               matTooltipPosition="above"
+                              data-cy="info-adapter"
                               (click)="openHelpDialog(adapter)">
                         <i class="material-icons">help_outline</i>
                       </button>
