--- a/ui/src/app/connect/components/adapter-configuration/schema-editor/schema-editor-header/schema-editor-header.component.html
+++ b/ui/src/app/connect/components/adapter-configuration/schema-editor/schema-editor-header/schema-editor-header.component.html
@@ -48,6 +48,7 @@
                 mat-button
                 mat-icon-button
                 matTooltip="Refresh Schema"
+                data-cy="refresh-schema"
                 (click)="guessSchema()">
             <mat-icon>refresh</mat-icon>
         </button>
