[STREAMPIPES-597] Integrate cypress component testing

--- a/ui/src/app/connect/components/adapter-configuration/schema-editor/event-schema-error-hints/event-schema-error-hints.component.html
+++ b/ui/src/app/connect/components/adapter-configuration/schema-editor/event-schema-error-hints/event-schema-error-hints.component.html
@@ -19,6 +19,7 @@
   <div fxLayout="column"
        fxFlex="100"
        fxLayoutAlign="start center"
+       data-cy="schema-validation-ok"
        *ngIf="!isLoading && !isError && schemaErrorHints.length === 0"
        class="schema-validation schema-validation-ok">
     <div fxFlex="100"
@@ -35,6 +36,7 @@
          fxLayout="column"
          [ngClass]="schemaErrorHint.level === 'error' ? 'schema-validation schema-validation-error' : 'schema-validation schema-validation-warning'"
          fxLayoutAlign="start center"
+         data-cy="schema-validation-error"
          *ngFor="let schemaErrorHint of schemaErrorHints">
       <div fxFlex="100"
            fxLayout="row"
@@ -43,7 +45,7 @@
         <i class="material-icons">warning</i>&nbsp;
         <b>{{schemaErrorHint.title}}</b>
       </div>
-      <div>
+      <div data-cy="schema-validation-error-content">
         <span>{{schemaErrorHint.content}}</span>
       </div>
     </div>
