--- a/ui/src/app/pipeline-details/components/pipeline-logs/pipeline-logs.component.html
+++ b/ui/src/app/pipeline-details/components/pipeline-logs/pipeline-logs.component.html
@@ -28,6 +28,7 @@
             class="mr-10"
             matTooltip="Refresh"
             (click)="triggerLogUpdate()">
+      <i class="material-icons">refresh</i>
     </button>
   </div>
   <div fxLayout="column" class="page-container-padding" *ngIf="pipeline">
