--- a/ui/src/app/core-ui/monitoring/simple-metrics/simple-metrics.component.html
+++ b/ui/src/app/core-ui/monitoring/simple-metrics/simple-metrics.component.html
@@ -16,27 +16,20 @@
   ~
   -->
 
-<sp-basic-nav-tabs [spNavigationItems]="tabs"
-                   [activeLink]="'logs'"
-                   [showBackLink]="true"
-                   [backLinkTarget]="['connect']">
-
-  <div nav fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-    <button mat-button
-            mat-icon-button
-            color="accent"
-            class="mr-10"
-            matTooltip="Refresh"
-            (click)="triggerUpdate()">
-      <i class="material-icons">refresh</i>
-    </button>
+<sp-basic-header-title-component [title]="elementName + ' - Metrics'"></sp-basic-header-title-component>
+<div fxLayout="row" fxLayoutAlign="center center">
+  <div fxFlex="50">
+    <sp-status-widget fxFlex="100" [label]="lastPublishedLabel"
+                      [widgetHeight]="400"
+                      [widgetWidth]="500"
+                      [statusValue]="lastTimestamp === 0 ? 'n/a' : (lastTimestamp | date : 'medium')">
+    </sp-status-widget>
   </div>
-  <div fxFlex="100" fxLayout="column" *ngIf="adapter">
-    <sp-simple-logs [elementName]="adapter.name"
-                    [logs]="adapterLogs"
-                    fxFlex="100"
-                    fxLayout="column"></sp-simple-logs>
+  <div fxFlex="50">
+    <sp-status-widget fxFlex="100" [label]="statusValueLabel"
+                      [widgetHeight]="400"
+                      [widgetWidth]="500"
+                      [statusValue]="statusValue">
+    </sp-status-widget>
   </div>
-
-
-</sp-basic-nav-tabs>
+</div>
