--- a/ui/src/app/pipelines/components/functions-overview/functions-metrics/functions-metrics.component.html
+++ b/ui/src/app/pipelines/components/functions-overview/functions-metrics/functions-metrics.component.html
@@ -17,10 +17,9 @@
   -->
 
 <sp-basic-nav-tabs [spNavigationItems]="tabs"
-                   [activeLink]="'logs'"
+                   [activeLink]="'metrics'"
                    [showBackLink]="true"
-                   [backLinkTarget]="['connect']">
-
+                   [backLinkTarget]="['pipelines']">
   <div nav fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
     <button mat-button
             mat-icon-button
@@ -31,11 +30,15 @@
       <i class="material-icons">refresh</i>
     </button>
   </div>
-  <div fxFlex="100" fxLayout="column" *ngIf="adapter">
-    <sp-simple-logs [elementName]="adapter.name"
-                    [logs]="adapterLogs"
-                    fxFlex="100"
-                    fxLayout="column"></sp-simple-logs>
+  <div fxFlex="100" fxLayout="column" *ngIf="activeFunction && contentReady">
+    <div *ngFor="let messagesIn of metrics.messagesIn | keyvalue">
+      <sp-simple-metrics [elementName]="streamNames[messagesIn.key]"
+                         lastPublishedLabel="Last consumed message"
+                         statusValueLabel="Consumed messages"
+                         [lastTimestamp]="messagesIn.value.lastTimestamp"
+                         [statusValue]="messagesIn.value.counter">
+      </sp-simple-metrics>
+    </div>
   </div>
 
 
