--- a/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
+++ b/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
@@ -82,9 +82,10 @@
                     mat-sort-header
                     *matHeaderCellDef> Name</th>
                 <td mat-cell *matCellDef="let adapter">
-                  <h4 style="margin-bottom:0;"
-                      data-cy="adapter-name">{{adapter.name}}</h4>
-                  <h5>{{adapter.description != '' ? adapter.description : '-'}}</h5>
+                  <div><b style="margin-bottom:0;"
+                      data-cy="adapter-name">{{adapter.name}}</b>
+                  </div>
+                  <span>{{adapter.description != '' ? adapter.description : '-'}}</span>
                 </td>
               </ng-container>
               <ng-container matColumnDef="adapterBase">
@@ -126,6 +127,20 @@
                 <th mat-header-cell *matHeaderCellDef> Created</th>
                 <td mat-cell *matCellDef="let adapter">
                   <h5>{{adapter.createdAt | date:'dd.MM.yyyy HH:mm'}}</h5>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="messagesSent">
+                <th mat-header-cell *matHeaderCellDef matTooltip="Messages sent since last start">#Messages</th>
+                <td mat-cell *matCellDef="let adapter">
+                  <span class="monitoring-info">{{adapterMetrics[adapter.elementId] ? adapterMetrics[adapter.elementId].messagesOut.counter : 0}}</span>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="lastMessage">
+                <th mat-header-cell *matHeaderCellDef> Last message</th>
+                <td mat-cell *matCellDef="let adapter">
+                  <span class="monitoring-info">{{adapterMetrics[adapter.elementId] ? (adapterMetrics[adapter.elementId].lastTimestamp | date : 'medium') : 'n/a'}}</span>
                 </td>
               </ng-container>
 
